<resources>
    <string name="app_name">Homework_016</string>
    <string name="sample_description">sample description</string>
    <string name="sample_title">sample title</string>
    <string name="update">UPDATE</string>
    <string name="enter_url">enter url</string>
    <string name="enter_description">enter description</string>
    <string name="enter_title">enter title</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
</resources>