<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ui.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/enter_title"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="text"
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUrl"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/teal_700"
        android:text="@string/update" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:text="@string/delete" />


</androidx.appcompat.widget.LinearLayoutCompat>