<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:inputType="text"
        android:hint="@string/enter_title"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="text"
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUrl"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/teal_700"
        android:text="@string/add" />


</androidx.appcompat.widget.LinearLayoutCompat>